# CodeCompiler

./: .gitignore  README.md  run.sh
cpp_src/Compiler/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  run.sh
cpp_src/Compiler/Compiler/: exe_program  out.ll
cpp_src/Compiler/Compiler/bridge/bridge/: JavaBridge.cpp  bridge_CustomIRBridge.h
cpp_src/Compiler/Compiler/bridge/nodes/: AstNode.h  IrNode.hpp
cpp_src/Compiler/Compiler/bridge/parser/: ParseTokenToAst.cpp  ParseTokenToAst.h
cpp_src/Compiler/Compiler/bridge/token/: Token.cpp  Token.h  TokenType.h
cpp_src/Compiler/Compiler/llvm_codegen/: LLVMCodeGen.cpp  LLVMCodeGen.h
cpp_src/Compiler/Compiler/scripts/: compile.sh
input/: input.txt
output/: GeneratedCode.java  output.txt
src/: Main.java
src/bridge/: CustomIRBridge.java  IRToStringConverter.java
src/codegen/: IrGenerator.java  IrToJava.java
src/codegen/irnodes/: AssignmentIrNode.java  BinaryOperationIrNode.java  IdentifierIrNode.java  IrNode.java  IrPrinter.java  IrVisitor.java  NumberLiteralIrNode.java  ProgramIrNode.java  ShowStatementIrNode.java  StringLiteralIrNode.java
src/error/: ParseException.java  SemanticException.java
src/lexer/: Lexer.java  Token.java  TokenDefinitions.java  TokenInfo.java  TokenPatterns.java  TokenType.java
src/optimization/: DeadCodeEliminator.java
src/parser/: Parser.java  grammer.txt
src/parser/nodes/: AssignmentNode.java  AstNode.java  AstPrinter.java  AstVisitor.java  BinaryOperationNode.java  IdentifierNode.java  NumberLiteralNode.java  ProgramNode.java  ShowStatementNode.java  StringLiteralNode.java
src/script/: run_generated_code.sh
src/semantic/: SemanticAnalyzer.java  SymbolTable.java
src/semantic/symbol/: Symbol.java
test/: test  test.cpp
