cmake_minimum_required(VERSION 3.10)

project(NodeBridge)

set(CMAKE_CXX_STANDARD 17)

add_library(NodeBridge SHARED
    Compiler/bridge/bridge/JavaBridge.cpp
    Compiler/bridge/token/Token.cpp
    Compiler/bridge/parser/ParseTokenToAst.cpp
    Compiler/llvm_codegen/LLVMCodeGen.cpp
)

target_link_libraries(NodeBridge
    LLVMCore
    LLVMSupport
    LLVMAArch64CodeGen
    LLVMCodeGen
    LLVMARMAsmParser
    LLVMAArch64AsmParser
    LLVMAArch64Desc
    LLVMAArch64Disassembler
    LLVMAArch64Info
    LLVMAArch64Utils
    LLVMARMCodeGen
    LLVMARMDesc
    LLVMARMDisassembler
    LLVMARMInfo
    LLVMARMUtils
    LLVMAggressiveInstCombine
    LLVMAnalysis
    LLVMAsmParser
    LLVMAsmPrinter
    LLVMBinaryFormat
    LLVMBitReader
    LLVMBitWriter
    LLVMMCA
    LLVMBitstreamReader
    LLVMCFGuard
    LLVMCFIVerify
    LLVMCodeGenTypes
    LLVMCoroutines
    LLVMCoverage
    LLVMDWARFLinker
    LLVMDWARFLinkerParallel
    LLVMDWP
    LLVMDebugInfoBTF
    LLVMDebugInfoCodeView
    LLVMDebugInfoDWARF
    LLVMDebugInfoGSYM
    LLVMDebugInfoLogicalView
    LLVMDebugInfoMSF
    LLVMDebugInfoPDB
    LLVMDebuginfod
    LLVMDemangle
    LLVMDiff
    LLVMDlltoolDriver
    LLVMExecutionEngine
    LLVMExegesis
    LLVMExegesisAArch64
    LLVMExtensions
    LLVMFileCheck
    LLVMFrontendHLSL
    LLVMFrontendOpenACC
    LLVMFrontendOpenMP
    LLVMFuzzMutate
    LLVMFuzzerCLI
    LLVMGlobalISel
    LLVMIRPrinter
    LLVMIRReader
    LLVMInstCombine
    LLVMInstrumentation
    LLVMInterfaceStub
    LLVMInterpreter
    LLVMJITLink
    LLVMLTO
    LLVMLibDriver
    LLVMLineEditor
    LLVMLinker
    LLVMMCDisassembler
    LLVMMC
    LLVMMCJIT
    LLVMMCParser
    LLVMMIRParser
    LLVMObjCARCOpts
    LLVMObjCopy
    LLVMObject
    LLVMObjectYAML
    LLVMOption
    LLVMOrcJIT
    LLVMOrcShared
    LLVMOrcTargetProcess
    LLVMPasses
    LLVMProfileData
    LLVMRemarks
    LLVMRuntimeDyld
    LLVMScalarOpts
    LLVMSelectionDAG
    LLVMSymbolize
    LLVMTableGen
    LLVMTableGenCommon
    LLVMTableGenGlobalISel
    LLVMTarget
    LLVMTargetParser
    LLVMTextAPI
    LLVMTransformUtils
    LLVMVectorize
    LLVMWindowsDriver
    LLVMWindowsManifest
    LLVMXRay
    lcurses
    LLVMipo
)
